--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -59,9 +59,11 @@
 	console.log('Rowdata_filtered: ' + filtered);
 	var rowData_cleaned = [];
 	for (var object in rowData) { 
-		var object_cleaned = object;
-		for (var property in object_cleaned) {
-			property = property.replace('#','');
+		for (var property in object) {
+			 if (object_cleaned.hasOwnProperty(property)) {   
+				var property_cleaned = property.replace('#','');
+				 var object_cleaned = {property_cleaned};
+			 }
 		}
 		rowData_cleaned.push(object_cleaned);
 	}
