--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -56,7 +56,7 @@
             		return true;
         	}
     	}, Object.create(null));
-	console.log('Rowdata_filtered: ' + filtered);
+	console.log(filtered);
 	var rowData_cleaned = [];
 	for (var object in rowData) { 
 		for (var property in object) {
