--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -67,7 +67,7 @@
 		}
 		rowData_cleaned.push(object_cleaned);
 	}
-	console.log('Rowdata_cleaned: ' + rowData_cleaned);
+	console.log(rowData_cleaned);
 	table.appendRows(filtered);
 	doneCallback();
       });
