--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -75,7 +75,7 @@
   tableau.registerConnector(myConnector);
 
   	
-    
+    //remove special chraacters in here already??
 function _retrieveXmlData(retrieveDataCallback) {
   if (!window.cachedTableData) {
     var conData = JSON.parse(tableau.connectionData);
