--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -63,7 +63,7 @@
 		Object.keys(item).forEach(function(key) {
   			var newkey = key.replace('#','');
   			item[newkey] = item[key];
-			if (item[key] !== item[neykey]) {
+			if (item[key] !== item[newkey]) {
   				delete item[key];
 			}
 		});  
