--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -95,7 +95,7 @@ function _retrieveXmlData(retrieveDataCallback) {
 	};
 	//enter pre-defined url or take it from user input, but then have to figure out how to dynamically get the schema (right now is hardcoded)
         //Test url https://www.w3schools.com/xml/cd_catalog.xml
-	xhttp.open('GET', proxyurl + url, true);
+	xhttp.open('GET', proxyurl + 'https://www.w3schools.com/xml/cd_catalog.xml', true);
 	xhttp.send();
         return;
     }
