--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -253,7 +253,7 @@ function _determineType(primitive) {
 	   //var conData = {"xmlString" : xmlString, "xmlUrl": xmlUrl};
 		
 	    var conData = {
-            'xmlUrl':  $('xmlUrl').val().trim();
+            'xmlUrl':  $('xmlUrl').val().trim(),
             'xmlString': $('xmlText').val().trim();
             };
 		
