--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -11,10 +11,7 @@
 (function() {
     // Create the connector object
     var myConnector = tableau.makeConnector();
-    myConnector.init = function () {
-       tableau.connectionName = 'XML data';
-       tableau.initCallback();
-    };
+
 	
     // Define the schema (right now is hardcoded > get dynamically?)
     myConnector.getSchema = function(schemaCallback) {
@@ -252,19 +249,18 @@ function _determineType(primitive) {
     $(document).ready(function() {
         $("#submitUrl").click(function() {
 	   console.log("Button submitUrl clicked");
-	   //var xmlUrl = document.getElementById("xmlUrl");
-           //var xmlString = document.getElementById("xmlText");
-	   //var conData = {"xmlString" : xmlString, "xmlUrl": xmlUrl};
+	   var xmlUrl = document.getElementById("xmlUrl").value;
+           var xmlString = document.getElementById("xmlText").value;
+	   var conData = {"xmlString" : xmlString, "xmlUrl": xmlUrl};
 		
-	    var conData = {
+	    /*var conData = {
             'xmlUrl':  $('xmlUrl').val().trim(),
             'xmlString': $('xmlText').val().trim();
-            };
+            };*/
 		
-	   tableau.log("conData:" + conData);
-
-    	   tableau.connectionName = "XML data: "; // This will be the data source name in Tableau
+	   tableau.log("conData: " + conData);
     	   tableau.connectionData = JSON.stringify(conData);
+	   tableau.connectionName = "XML data: "; // This will be the data source name in Tableau
     	   tableau.submit(); 
 	   
         });
