--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -214,6 +214,7 @@ function _findLongestArray(xmlElement, bestSoFar) {
 // Given an array of js objects, returns a map from data column name to data type
 function _extractHeaders(rowData) {
   var toRet = {};
+	console.log(rowData);
   //var tableName_array = rowData.getElementsByTagName("CD"); //enable this table name to be defined by user input
   //console.log("Table name_array: " + tableName_array);
   for (var row = 0; row < rowData.length; ++row) {
