--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -87,6 +87,7 @@ function _retrieveXmlData(retrieveDataCallback) {
     var conData = JSON.parse(tableau.connectionData);
     var tableName = conData.tableName;
     console.log("Table name: " + tableName);
+    console.log(conData);
     var xmlString = conData.xmlString;
     if (conData.xmlUrl) {
 	console.log(conData.xmlUrl);
@@ -214,7 +215,6 @@ function _findLongestArray(xmlElement, bestSoFar) {
 // Given an array of js objects, returns a map from data column name to data type
 function _extractHeaders(rowData) {
   var toRet = {};
-	console.log(rowData);
   //var tableName_array = rowData.getElementsByTagName("CD"); //enable this table name to be defined by user input
   //console.log("Table name_array: " + tableName_array);
   for (var row = 0; row < rowData.length; ++row) {
