--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -51,7 +51,6 @@
 // Get the data from default link/file ==> tbd: get data from input Url
  myConnector.getData = function(table, doneCallback) {
       _retrieveXmlData(function (tableData) {
-	 console.log(table.tableInfo.id);
 	var rowData = tableData.rowData;
 	//loop through the array of objects to remove objects that are null
         filtered = rowData.filter(function (a) {
@@ -87,7 +86,7 @@ function _retrieveXmlData(retrieveDataCallback) {
     var conData = JSON.parse(tableau.connectionData);
     var tableName = conData.tableName;
     console.log("Table name: " + tableName);
-    console.log(conData);
+    console.log(conData.xmlString);
     var xmlString = conData.xmlString;
     if (conData.xmlUrl) {
 	console.log(conData.xmlUrl);
