--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -142,10 +142,11 @@ function _xmlHttpReq(url, successCallback) {
 // Returns an object with headers and the row level data
 function _xmlToTable(xmlDocument) {
   var tableName = xmlDocument.getElementsByTagName("CD"); //enable this table name to be defined by user input
+  console.log("Table name: " + tableName);
   var rowData = _flattenData(xmlDocument);
   var headers = _extractHeaders(rowData);
   var tableName = xmlDocument.getElementsByTagName("CD"); //enable this table name to be defined by user input
-  return {"headers": headers, "rowData":rowData};
+  return {"headers": headers, "rowData":rowData, "xml_raw": xmlDocument};
 }
 // Given an object:
 //   - finds the longest array in the xml
