--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -96,6 +96,7 @@ function _retrieveXmlData(retrieveDataCallback) {
     	xhttp.onreadystatechange = function() {
 		if (this.readyState == 4 && this.status == 200) {
 			var xmlDoc = this.responseXML;
+			console.log("xml doc: " + xmlDoc);
 			window.cachedTableData = _xmlToTable(xmlDoc);
 			retrieveDataCallback(window.cachedTableData);
           	 }
