--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -94,8 +94,11 @@ function _retrieveXmlData(retrieveDataCallback) {
         var xhttp = new XMLHttpRequest();
     	xhttp.onreadystatechange = function() {
 		if (this.readyState == 4 && this.status == 200) {
+			//here the document is received in its original form => filter the correct tag name 
 			var xmlDoc = this.responseXML;
 			console.log(xmlDoc);
+			var tag1 = xmlDoc.getElementsByTagName("CD"); //enable this table name to be defined by user input
+			console.log(tag1);
 			window.cachedTableData = _xmlToTable(xmlDoc);
 			retrieveDataCallback(window.cachedTableData);
           	 }
@@ -141,8 +144,6 @@ function _xmlHttpReq(url, successCallback) {
 // Takes a hierarchical xml document and tries to turn it into a table
 // Returns an object with headers and the row level data
 function _xmlToTable(xmlDocument) {
-  var tableName = xmlDocument.getElementsByTagName("CD"); //enable this table name to be defined by user input
-  console.log("Table name: " + tableName);
   var rowData = _flattenData(xmlDocument);
   var headers = _extractHeaders(rowData);
   var tableName = xmlDocument.getElementsByTagName("CD"); //enable this table name to be defined by user input
