--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -97,10 +97,11 @@ function _retrieveXmlData(retrieveDataCallback) {
 			//here the document is received in its original form => filter the correct tag name 
 			var xmlDoc = this.responseXML;
 			console.log(xmlDoc);
+			//filter data for one specific tag
 			var tag1 = xmlDoc.getElementsByTagName("CD")[0]; //enable this table name to be defined by user input
 			console.log(tag1);
-			
-			window.cachedTableData = _xmlToTable(xmlDoc);
+			//send only the data with this tagname to be converted into a table
+			window.cachedTableData = _xmlToTable(tag1);
 			retrieveDataCallback(window.cachedTableData);
           	 }
 	};
