--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -97,8 +97,8 @@ function _retrieveXmlData(retrieveDataCallback) {
 			//here the document is received in its original form => filter the correct tag name 
 			var xmlDoc = this.responseXML;
 			console.log(xmlDoc);
-			//filter data for one specific tag
-			var tag1 = xmlDoc.getElementsByTagName("CATALOG")[0].childNodes; //enable this table name to be defined by user input
+			//filter data for one specific tag 
+			var tag1 = xmlDoc.getElementsByTagNameNS("CATALOG"); //enable this table name to be defined by user input
 			console.log(tag1);
 			//send only the data with this tagname to be converted into a table ==> 
 			//not working cause only picks the first header name as well then
