--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -98,7 +98,9 @@ function _retrieveXmlData(retrieveDataCallback) {
 			var xmlDoc = this.responseXML;
 			console.log(xmlDoc);
 			//filter data for one specific tag 
-			var tag1 = xmlDoc.documentElement; //enable this table name to be defined by user input
+			var root = xmlDoc.documentElement; //enable this table name to be defined by user input
+			console.log(root);
+			var tag1 = root.childNodes[1];
 			console.log(tag1);
 			//send only the data with this tagname to be converted into a table ==> 
 			//not working cause only picks the first header name as well then
