--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -247,6 +247,7 @@ function _determineType(primitive) {
 	   tableau.log("conData: " + conData);
     	   tableau.connectionData = JSON.stringify(conData);
 	   tableau.connectionName = "XML data: "; // This will be the data source name in Tableau
+		//tableau.user
     	   tableau.submit(); 
 	   
         });
