--- a/xml_one-table_dynamic-schema.html
+++ b/xml_one-table_dynamic-schema.html
@@ -25,11 +25,15 @@
 	var cols = [];   
         for (var fieldName in headers) {
 		//if (
-            if (headers.hasOwnProperty(fieldName)) {  
-		var fieldName_cleaned1 = fieldName.replace('#','');
-		var fieldName_cleaned2 = fieldName_cleaned1.replace(':','');
+            if (headers.hasOwnProperty(fieldName)) {
+		var to_replace = { # : '', : : ' '}
+		var re = new RegExp(`[${ Object.keys(to_replace).join('') }]`,'g')
+		var res = fieldName.replace(re,(m => to_replace[m] ) )
+		//console.log(res)
+		//var fieldName_cleaned1 = fieldName.replace('#','');
+		//var fieldName_cleaned2 = fieldName_cleaned1.replace(':','');
 		var singleCol = {
-			id: fieldName_cleaned2,
+			id: res,
 			dataType: headers[fieldName]
 		}
 		cols.push(singleCol);
