--- a/xml_one-table_dynamic-schema.html
+++ b/xml_one-table_dynamic-schema.html
@@ -26,9 +26,9 @@
         for (var fieldName in headers) {
 		//if (
             if (headers.hasOwnProperty(fieldName)) {
-		var to_replace = { # : '', : : ' '}
-		var re = new RegExp(`[${ Object.keys(to_replace).join('') }]`,'g')
-		var res = fieldName.replace(re,(m => to_replace[m] ) )
+		var to_replace = { # : '', : : ' '};
+		var re = new RegExp(`[${ Object.keys(to_replace).join('') }]`,'g');
+		var res = fieldName.replace(re,(m => to_replace[m] ) );
 		//console.log(res)
 		//var fieldName_cleaned1 = fieldName.replace('#','');
 		//var fieldName_cleaned2 = fieldName_cleaned1.replace(':','');
