--- a/xml_one-table_dynamic-schema.html
+++ b/xml_one-table_dynamic-schema.html
@@ -27,7 +27,7 @@
 		//if (
             if (headers.hasOwnProperty(fieldName)) {
 		var replaceChars={ "#":"" , ":":" " };
-		fieldName.replace(/#|_/g,function(match) {
+		fieldName.replace(/#|:/g,function(match) {
 			return replaceChars[match];
 		})
 		//console.log(res)
