--- a/xml_one-table_dynamic-schema.html
+++ b/xml_one-table_dynamic-schema.html
@@ -26,15 +26,12 @@
         for (var fieldName in headers) {
 		//if (
             if (headers.hasOwnProperty(fieldName)) {
-		var replaceChars={ "#":"" , ":":" " };
-		fieldName.replace(/#|:/g,function(match) {
-			return replaceChars[match];
-		})
+		var fieldName_cleaned = fieldName.replace(/#/g,' ').replace(/:/g,' ');
 		//console.log(res)
 		//var fieldName_cleaned1 = fieldName.replace('#','');
 		//var fieldName_cleaned2 = fieldName_cleaned1.replace(':','');
 		var singleCol = {
-			id: fieldName,
+			id: fieldName_cleaned,
 			dataType: headers[fieldName]
 		}
 		cols.push(singleCol);
