--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -98,7 +98,7 @@ function _retrieveXmlData(retrieveDataCallback) {
 	//xml http request
             var xmlhttp = new XMLHttpRequest();
 	    //enter default url or take it from user input (const url)
-            xmlhttp.open('GET', proxyurl + 'https://www.enter-a-url-com', true);
+            xmlhttp.open('GET', proxyurl + 'https://www.w3.org/2003/05/soap-envelope/', true);
             // build SOAP request
             var sr =
                 '<?xml version="1.0" encoding="utf-8"?>' +
