--- a/xml_soap-request_dynamic-schema.html
+++ b/xml_soap-request_dynamic-schema.html
@@ -267,7 +267,7 @@ function _determineType(primitive) {
 	   var xmlUrl = document.getElementById("xmlUrl").value;
            //var xmlString = document.getElementById("xmlText").value;
 	   var tableName = "Some table name";
-	   if (is_url(xmlurl)  {
+	   if (is_url(xmlurl))  {
 	  	var conData = {"tableName": tableName, /*"xmlString" : xmlString,*/ "xmlUrl": xmlUrl};
 	  	tableau.log("conData: " + conData);
     	   	tableau.connectionData = JSON.stringify(conData);
